[gd_scene load_steps=3 format=3 uid="uid://dcbc0i0ehh12u"]

[ext_resource type="Script" path="res://Connection.cs" id="1_0kxth"]
[ext_resource type="Script" path="res://rich_text_label.gd" id="2_hdx61"]

[node name="Connection" type="Node2D"]
script = ExtResource("1_0kxth")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
offset_right = 1276.0
offset_bottom = 746.0
script = ExtResource("2_hdx61")

[node name="B1" type="Timer" parent="RichTextLabel"]
autostart = true

[node name="B2" type="Timer" parent="RichTextLabel"]
autostart = true

[node name="B3" type="Timer" parent="RichTextLabel"]
autostart = true

[node name="pB1" type="Timer" parent="RichTextLabel"]
autostart = true

[node name="pB2" type="Timer" parent="RichTextLabel"]
autostart = true

[node name="pB3" type="Timer" parent="RichTextLabel"]
autostart = true

[connection signal="timeout" from="RichTextLabel/B1" to="RichTextLabel" method="_on_b_1_timeout"]
[connection signal="timeout" from="RichTextLabel/B2" to="RichTextLabel" method="_on_b_2_timeout"]
[connection signal="timeout" from="RichTextLabel/B3" to="RichTextLabel" method="_on_b_3_timeout"]
[connection signal="timeout" from="RichTextLabel/pB1" to="RichTextLabel" method="_on_p_b_1_timeout"]
[connection signal="timeout" from="RichTextLabel/pB2" to="RichTextLabel" method="_on_p_b_2_timeout"]
[connection signal="timeout" from="RichTextLabel/pB3" to="RichTextLabel" method="_on_p_b_3_timeout"]
